# Poker

./: .gitignore  CMakeLists.txt  Makefile  Node.cpp  README.md  Trainer.cpp  Trainer.h  kuhnbot.cpp  mainKuhn.cpp
Poker/: Card.cpp  Card.hpp  Game.cpp  Game.hpp  GameLocal.cpp  GameLocal.hpp  PlayerInfo.cpp  PlayerInfo.hpp  Poker.pro  Poker.pro~RF48c591e.TMP  PokerPlayer.cpp  PokerPlayer.hpp  anal  data  logic_scratch.cpp  logic_scratch.h  logic_scratch.hpp  logistic_regression  logistic_regression_1  logistic_regression_2  main.cpp  mainwindow.cpp  mainwindow.ui  pokerGame  pokerp.cpp  pokerp.h  table.cpp
Poker/Analysis/: AnalysisDiego.cpp  AnalysisDiego.hpp  PokerHands3.txt  ProcessHandHistory.cpp  a.out  analysis.cpp  analysis.h  analysis.hpp  expected_money.cpp  expected_money.hpp  margin.cpp  margin.hpp  matplotlibcpp.h  plot_test_mateo.cpp  plot_test_mateo.h  vpip.cpp  vpip.h
Poker/Bots/: Bot.cpp  Bot.hpp  CMakeLists.txt
Poker/Bots/Easy/: BotDrunk.cpp  BotDrunk.hpp  BotEasy.cpp  BotEasy.hpp  MonkeyBot.cpp  MonkeyBot.hpp
Poker/Bots/Hard/Axel/: BotAxel.cpp  BotAxel.hpp
Poker/Bots/Hard/Cenzo/: BotCenzo.cpp  BotCenzo.hpp
Poker/Bots/Hard/Darius/: BotDarius.cpp  BotDarius.hpp
Poker/Bots/Hard/Kenza/: BotKenza.cpp  BotKenza.hpp
Poker/Bots/Hard/Kenza /: KuhnPokerStrategy.txt  Node.h  kuhnbot.h
Poker/Bots/Hard/Leal/: BotLeal.cpp  BotLeal.hpp
Poker/Bots/Hard/Pu/: BotPu.cpp  BotPu.hpp
Poker/Bots/Medium/: BotMedium.cpp  BotMedium.hpp  MediumLeal.cpp  MediumLeal.hpp
Poker/Client/: client.cc  client.h
Poker/Client/Client/: # Poker Client.md
Poker/Client/app/: CMakeLists.txt
Poker/Client/src/: CMakeLists.txt
Poker/Client/src/lib/Card/: CMakeLists.txt  card.cc
Poker/Client/src/lib/PokerPlayer/: CMakeLists.txt  poker_player.cc
Poker/Database/: Creationaccount.cpp  Creationaccount.hpp  hash.cpp
Poker/GameLogic/: Card.cpp  Card.hpp  Deck.cpp  Deck.hpp  Game.cpp  Game.hpp  GameLocal.cpp  GameLocal.hpp  Monte_Carlo_Probability_Simulator.cpp  Monte_Carlo_Probability_Simulator.hpp  PlayerInfo.cpp  PlayerInfo.hpp  PokerHand.cpp  PokerHand.hpp  PokerPlayer.cpp  PokerPlayer.hpp  PokerPlayerLocal.cpp  PokerPlayerLocal.hpp  Table.cpp  Table.hpp  logic_scratch.cpp  logic_scratch.h  logic_scratch.hpp  statisical_analysis_1.cpp  statistical_analysis.cpp  statistical_analysis.h  statistical_analysis_2.cpp  statistical_analysis_2.h  table.cpp  table.hpp
Poker/GameLogic/Analysis/: AnalysisDiego.cpp  AnalysisDiego.hpp  PokerHands1.txt  ProcessHandHistory.cpp  analysis.cpp  analysis.hpp  main.cpp  statisical_analysis_1.h  statistical_analysis_2.cpp  statistical_analysis_2.h
Poker/Visuals/: Image.qrc
Poker/Visuals/Gamewindow/: gamelocalwindow.cpp  gamelocalwindow.hpp  gamewindow.cpp  gamewindow.hpp  gamewindow.ui  localgamewindow.cpp  localgamewindow.h  visualpinfo.cpp  visualpinfo.hpp
Poker/Visuals/MainWindow/: gamewindow.cpp  gamewindow.hpp  gamewindow.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
Poker/Visuals/RulesWindow/: rules.cpp  rules.hpp  ruleswindow.cpp  ruleswindow.h  ruleswindow.ui
Poker/include/: player.hpp
Poker/logic/cpp/: PokerPlayer.cpp  logic_scratch.cpp
Poker/logic/headers/: PokerPlayer.hpp  bot.hpp  card.hpp
Poker/pokerGame.dSYM/Contents/: Info.plist
Poker/pokerGame.dSYM/Contents/Resources/DWARF/: pokerGame
Reporting/: Alvaro Nieto.md  Anatole De Margerie.md  Arturo Favara.md  Augustin Clot.md  Cenzo Poirier De Carvalho.md  Darius Lazea.md  Diego Munoz.md  DiegoMunoz.md  Giselle Feng.md  Joanne Jegou.md  Jules Lahmi.md  Kenza Chaabouni.md  Le Huang.md  Leal Köksal.md  Luca Fechete.md  Lucas Massot.md  Mateo Aguilar.md  Pu Yang.md  Remi Guillou.md  Sacha Elalouf.md  Tamara Topalov.md
Server/Client/: .gitignore  CMakeLists.txt
Server/Client/app/: main.cpp
Server/Client/cmake/: Docs.cmake
Server/Client/src/Client/: # Poker Client.md  CMakeLists.txt  client.cc  client.h
Server/Client/src/lib/: CMakeLists.txt
Server/Client/src/lib/Card/: card.h
Server/Client/src/lib/Card2/: CMakeLists.txt  card2.cc  card2.h
Server/Client/src/lib/GameLocal/: CMakeLists.txt
Server/Client/src/lib/PokerHand/: CMakeLists.txt  poker_hand.cc  poker_hand.h
Server/Client/src/lib/PokerPlayer/: poker_player.cc  poker_player.h
Server/GameLogic/: Deck.cpp  GameLocal.cpp  PokerPlayer.cpp
Server/Poker/: CMakeLists.txt
Server/Poker/app/: CMakeLists.txt  main.cpp
Server/Poker/src/Database/: Creationaccount.cpp
Server/Poker/src/Hash/: hash.hpp
Server/Poker/src/Server/: CMakeLists.txt  server.cc  server.h
Server/Poker/src/lib/: CMakeLists.txt
Server/Poker/src/lib/Card/: card.cc
Server/Poker/src/lib/Dealer/: CMakeLists.txt  dealer.cc  dealer.h
Server/Poker/src/lib/PokerTableState/: CMakeLists.txt  poker_table_state.cc
app/: CMakeLists.txt  main.cpp
build-Poker-Bureau_x86_windows_msys_pe_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-Poker-Bureau_x86_windows_msys_pe_64bit-Debug/debug/: moc_mainwindow.cpp
build-Poker-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-Poker-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Poker-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: main.cpp.C6C67EC7DAFEE758.idx  mainwindow.cpp.9DFAB94DD3752A37.idx  (+1 more)
build-Poker-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
build-Poker-Qt_6_2_4_for_macOS-Debug/: .gitignore  .qmake.stash  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
build-Poker-Qt_6_2_4_for_macOS-Debug/Poker.app/Contents/: Info.plist
build-Poker-Qt_6_2_4_for_macOS-Debug/Poker.app/Contents/MacOS/: Poker
src/: CMakeLists.txt
src/Database/: Creationaccount.hpp
src/Server/: CMakeLists.txt  server.cc  server.h
src/Server/Client/: client  client.cc  client.h
src/SpeechToText/: CMakeLists.txt  speech_to_text.cc
src/_Server/: CMakeLists.txt  server.cc
src/lib/SpeechToText/: CMakeLists.txt  speech_to_text.cc
test/: CMakeLists.txt
test/Client/: client.cc
test/Database/: Creationaccount.cpp
